Fixed issue where H2 styles were centre aligned on all pages

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -113,3 +113,7 @@ body {
         width: 100%;
     }
 }
+
+.vp-doc > #feature-overview {
+    text-align: center;
+}
